--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <img id="icon" src="images/pastebin.jpg"></div></a>
   </div>
   <div class="w3-third">
-    <a href="https://www.google.com/search?q=(site:pastebin.com OR site:apaste.info OR site:pastesqf.com OR site:sprunge.us OR site:pastecode.fr OR site:99paste.com OR site:nopaste.me OR site:www.paste.lv OR site:codepad.org OR site:ghostbin.com OR site:paste.mozilla.org OR site:pasteio.com)" target="_blank" class="pastbin-alter3"><div><p>Alternative Pastebin 3</p>
+    <a href="https://www.google.com/search?q=(site:apaste.info OR site:pastesqf.com OR site:sprunge.us OR site:pastecode.fr OR site:99paste.com OR site:nopaste.me OR site:www.paste.lv OR site:codepad.org OR site:ghostbin.com OR site:paste.mozilla.org OR site:pasteio.com)" target="_blank" class="pastbin-alter3"><div><p>Alternative Pastebin 3</p>
     <img id="icon" src="images/pastebin.jpg"></div></a>
   </div>
   <div class="w3-third">
